--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Hello World!</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi et odit asperiores quisquam fugiat nostrum esse
+        vero, iure eligendi neque, totam vitae quasi accusamus nihil eveniet doloribus cupiditate cumque illo?</p>
 </body>
 
 </html>
